network-policy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: server
