network-policy/default-deny-all-netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: server-deny-all
spec:
  podSelector:
    matchLabels:
      app: server
